[gd_scene load_steps=7 format=3 uid="uid://cqh5toxeo8mqw"]

[ext_resource type="Script" path="res://draft2/Turret.gd" id="1_4vq25"]
[ext_resource type="ArrayMesh" uid="uid://b21bw1rxmg7i8" path="res://draft/pedestalmesh.res" id="2_dvhxw"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8713b"]
albedo_color = Color(0.262745, 0.180392, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1w8kr"]
albedo_color = Color(1, 0.215686, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_cflbp"]

[sub_resource type="SphereShape3D" id="SphereShape3D_7t4x7"]

[node name="Turret" type="Area3D"]
script = ExtResource("1_4vq25")

[node name="Base" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_8713b")
mesh = ExtResource("2_dvhxw")

[node name="Turret_Head" type="MeshInstance3D" parent="."]
transform = Transform3D(-9.79344e-09, -0.224048, 0, 0.224048, -9.79344e-09, 0, 0, 0, 0.224048, 0, 1.6793, 0)
material_override = SubResource("StandardMaterial3D_1w8kr")
mesh = SubResource("BoxMesh_cflbp")

[node name="Turret_Range" type="CollisionShape3D" parent="."]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0)
shape = SubResource("SphereShape3D_7t4x7")

[node name="Default_Lookat" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.63423, 0)

[node name="phantom" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0137305)
material_override = SubResource("StandardMaterial3D_8713b")
transparency = 0.44
mesh = ExtResource("2_dvhxw")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
